I broke something and i give up

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
   </head>
   <body>
 
-  <div id="app"></div>
-  <div id="checkout"> </div>
+    <section class="main">
+       <div class="search-bar">
+         <form class="main-menu-search">
+           <input type="text" class="main-menu-search-input" placeholder="Search Menu"><i class="fa fa-search"></i>
+         </form>
+       </div>
+       <div class="main-content container"> </div>
+         <div class="main-menu">   </div>
+       </section>
 
   <!-- Third Party Scripts -->
   <script src="bower_components/commonjs-require/commonjs-require.js"></script>
